--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,8 @@ PROXY_URL=
 
 # Polymarket scan
 POLYMARKET_BASE_URL=https://gamma-api.polymarket.com
-POLYMARKET_CATEGORY=Sports
-POLYMARKET_EVENTS_LIMIT=300
+POLYMARKET_CATEGORY=
+POLYMARKET_EVENTS_LIMIT=600
 POLYMARKET_PAGE_SIZE=50
 POLYMARKET_REQ_DELAY_MS=500
 POLYMARKET_MAX_RETRIES=5
